Add gn arg to optionally compile webgl2-compute

This patch conditionally compile the implementation of
WebGL2ComputeRenderingContext only on some platforms.

Add a gn arg support_webgl2_compute_context to control it.

Bug: 862151
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Iadf55fa02174bb0451a9035d6513de5a6b94c051
Reviewed-on: https://chromium-review.googlesource.com/1137987
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Kent Tamura <tkent@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576237}
Former-commit-id: df3a31b23ff39bf90b64a7f0ec35b74f817319b6